--- a/webpack4.1/src/css/base.css
+++ b/webpack4.1/src/css/base.css
@@ -30,27 +30,51 @@ app {
     width: 400px;
     height: 400px;
     float: left;
-    /* background-image: url('../assets/imgs/1.png') */
-    background: url('../assets/imgs/1.png')
+    background: url('../assets/imgs/1@2x.png')
 }
 .img2{
     width: 400px;
     height: 400px;
     float: left;
-    /* background-image: url('../assets/imgs/2.png') */
-    background: url('../assets/imgs/2.png')
+    background: url('../assets/imgs/2@2x.png')
 }
 .img3{
     width: 400px;
     height: 400px;
     float: left;
-    /* background-image: url('../assets/imgs/3.jpg') */
-    background: url('../assets/imgs/3.jpg')
+    background: url('../assets/imgs/3@2x.png')
 }
 .img4{
     width: 400px;
     height: 400px;
     float: left;
-    /* background-image: url('../assets/imgs/4.png') */
-    background: url('../assets/imgs/4.png')
+    background: url('../assets/imgs/4@2x.png')
+}
+
+
+/*字体图标*/
+
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../assets/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'),
+         url('../assets/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), 
+         url('../assets/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), 
+         url('../assets/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), 
+         url('../assets/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.fa-folder:before {
+    content: "\f07b";
 }
